# Goodfood

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  dockerfile.ngin  dockerfile.pg  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
apps/goodfood/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  tests.py  urls.py  validators.py  views.py
apps/goodfood/migrations/: 0001_initial.py  0002_goods_slugify_name.py  0003_alter_goods_category_alter_goods_desc_and_more.py  0004_alter_categories_cat_alter_goods_category.py  (+3 more)
apps/users/: forms.py  urls.py
compose/db/: Dockerfile
compose/django/: Dockerfile  entrypoint.sh
compose/nginx/: nginx.conf
config/: asgi.py  urls.py  wsgi.py
config/logs/: django.txt
config/settings/: __init__.py  base.py  local.py  production.py
goodfood/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
goodfood/migrations/: 0001_initial.py  0002_rename_category_categories_cat_and_more.py  0005_alter_categories_cat_alter_goods_desc_and_more.py  0006_alter_goods_slugify_name.py
goodfood/templates/: base.html  category.html  food.html  foood.html  goods.html  index.html  login.html  registration.html  sign_up.html
nginx/: nginx.conf
project/: auth.py  email.py  settings.py  urls.py
static/css/: styles.css
static_collect/css/: styles.css
templates/: base.html  base_auth.html
templates/account/: login.html  signup.html  verification_sent.html
templates/goodfood/: category.html  goods.html  index.html
templates/socialaccount/: login.html
templates/templatetags/: form_tags.py
tests/: conftest.py  factorytest.py  test_smoke.py
tests/goodfood/: test_model.py  test_views.py
users/: forms.py  urls.py  views.py
(+20 files in other folders)
