
[tool.poetry]
package-mode = false
name = "django-goodfood-project"
version = "0.1.0"
description = "Web site"
authors = ["Haelad <stupakviktor00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
asgiref = "^3.9.1"
blinker = "^1.9.0"
click = "^8.2.1"
colorama = "^0.4.6"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
pillow = "^11.3.0"
postgres = "^4.0"
psycopg2-pool = "^1.2"
python-decouple = "^3.8"
python-slugify = "^8.0.4"
redis = "^6.4.0"
six = "^1.17.0"
sqlparse = "^0.5.3"
text-unidecode = "^1.3"
transliterate = "^1.10.2"
tzdata = "^2025.2"
werkzeug = "^3.1.3"
django-redis = "^6.0.0"
python-dotenv = "^1.1.1"
dj-database-url = "^3.0.1"
django-csp = "^4.0"
django-allauth = "65.9.0"
PyJWT = "2.10.1"
cryptography = "42.0.8"
requests = "^2.31"        
requests-oauthlib = "^1.3"
python3-openid = "3.2.0"
django-widget-tweaks = "^1.5.0"
crispy-bootstrap5 = "^2025.6"
django-crispy-forms = {extras = ["bootstrap5"], version = "^2.5"}



[tool.poetry.group.dev.dependencies]
asttokens = ">=3.0.0,<4.0.0"
decorator = ">=5.2.1,<6.0.0"
django-debug-toolbar = ">=6.0.0,<7.0.0"
django-extensions = ">=4.1,<5.0"
django-shell-plus = ">=1.1.7,<2.0.0"
executing = ">=2.2.0,<3.0.0"
ipython = ">=9.4.0,<10.0.0"
jedi = ">=0.19.2,<0.20.0"
matplotlib-inline = ">=0.1.7,<0.2.0"
parso = ">=0.8.4,<0.9.0"
prompt-toolkit = ">=3.0.51,<4.0.0"
pure-eval = ">=0.2.3,<0.3.0"
pygments = ">=2.19.2,<3.0.0"
stack-data = ">=0.6.3,<0.7.0"
traitlets = ">=5.14.3,<6.0.0"
wcwidth = ">=0.2.13,<0.3.0"
slugify = ">=0.0.1,<0.0.2"
whitenoise = "^6.11.0"
update = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]

